# NExsocio

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  requirements.txt  turbo.json
.github/workflows/: ci.yml  deploy-staging.yml
apps/web/: next.config.ts  package.json  tsconfig.json
docs/: MANIFESTO.md
infrastructure/cdk/: cdk.json  package.json  tsconfig.json
infrastructure/cdk/lib/: nexus-eks-stack.ts  nexus-staging-stack.ts
infrastructure/k8s/argocd/: application-staging.yaml  application.yaml
infrastructure/k8s/istio/: peer-authentication.yaml
infrastructure/k8s/services/: content-deployment.yaml  identity-deployment.yaml  professional-deployment.yaml  social-graph-deployment.yaml
infrastructure/k8s/staging/: kustomization.yaml  namespace.yaml
libs/nexus-common/: pyproject.toml
libs/nexus-common/nexus_common/: __init__.py
scripts/: deploy-vercel.sh  dev.sh  generate-brand-icons.mjs  go-live-apis.sh  process-logo-mark.mjs  setup-hostinger-vercel-dns.sh
services/: _template_stub.py
services/commerce/application/: dtos.py  (+1 more)
services/content/: Dockerfile  pyproject.toml
services/identity/: Dockerfile  README.md  pyproject.toml
services/identity/api/: deps.py  main.py  routes.py
services/identity/application/: auth_dtos.py  auth_service.py  dtos.py  services.py
services/identity/domain/: entities.py
services/identity/infrastructure/: config.py  database.py  models.py
services/professional/: Dockerfile
services/social_graph/: Dockerfile
tests/: conftest.py  test_identity_flow.py
(+109 files in other folders)
