[project]
name = "nexus-identity"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "nexus-common",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0", "pytest-asyncio>=0.25.0", "httpx>=0.28.0", "ruff>=0.9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
nexus-common = { path = "../../libs/nexus-common", editable = true }